New David function

--- a/Task-4.ipynb
+++ b/Task-4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
       "AGE                    22223 non-null float64\n",
       "BILL                   22223 non-null float64\n",
       "ORGYN                  22223 non-null int64\n",
-      "AFFL                   22223 non-null int32\n",
+      "AFFL                   22223 non-null int64\n",
       "LTIME                  22223 non-null float64\n",
       "GENDER_F               22223 non-null uint8\n",
       "GENDER_M               22223 non-null uint8\n",
@@ -49,8 +49,8 @@
       "CLASS_Platinum         22223 non-null uint8\n",
       "CLASS_Silver           22223 non-null uint8\n",
       "CLASS_Tin              22223 non-null uint8\n",
-      "dtypes: float64(3), int32(1), int64(1), uint8(32)\n",
-      "memory usage: 1.4 MB\n"
+      "dtypes: float64(3), int64(2), uint8(32)\n",
+      "memory usage: 1.5 MB\n"
      ]
     }
    ],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -294,15 +294,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train accuracy: 0.825404988429\n",
-      "Test accuracy: 0.812809359532\n",
+      "Train accuracy: 0.8254049884289021\n",
+      "Test accuracy: 0.8128093595320234\n",
       "             precision    recall  f1-score   support\n",
       "\n",
       "          0       0.84      0.93      0.88      5015\n",
@@ -513,28 +513,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train accuracy: 0.814412445359\n",
-      "Test accuracy: 0.818959052047\n",
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       0.84      0.94      0.89      5015\n",
-      "          1       0.72      0.44      0.55      1652\n",
-      "\n",
-      "avg / total       0.81      0.82      0.80      6667\n",
-      "\n",
-      "{'alpha': 0.0001, 'hidden_layer_sizes': (3,)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "params = {'hidden_layer_sizes': [(3,), (5,), (7,), (9,)], 'alpha': [0.01,0.001, 0.0001, 0.00001]}\n",
+    "params = {'hidden_layer_sizes': [(3,)], 'alpha': [0.0001]}\n",
     "\n",
     "cv = GridSearchCV(param_grid=params, estimator=MLPClassifier(random_state=rs), cv=10, n_jobs=-1)\n",
     "cv.fit(X_train, y_train)\n",
@@ -782,23 +765,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train accuracy: 0.812933916174\n",
-      "Test accuracy: 0.81610919454\n",
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       0.83      0.94      0.89      5015\n",
-      "          1       0.71      0.43      0.54      1652\n",
-      "\n",
-      "avg / total       0.80      0.82      0.80      6667\n",
-      "\n",
-      "{'C': 1e-05}\n"
+     "ename": "NameError",
+     "evalue": "name 'GridSearchCV' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-41e88ed1f903>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'C'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mpow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGridSearchCV\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam_grid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mestimator\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mLogisticRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_jobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mcv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_sel_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train_log\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'GridSearchCV' is not defined"
      ]
     }
    ],
@@ -845,7 +823,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
