--- a/Task 2.ipynb
+++ b/Task 2.ipynb
@@ -9,14 +9,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 22223 entries, 0 to 22222\n",
+      "Data columns (total 37 columns):\n",
+      "AGE                    22223 non-null float64\n",
+      "BILL                   22223 non-null float64\n",
+      "ORGYN                  22223 non-null int64\n",
+      "AFFL                   22223 non-null int64\n",
+      "LTIME                  22223 non-null float64\n",
+      "GENDER_F               22223 non-null uint8\n",
+      "GENDER_M               22223 non-null uint8\n",
+      "GENDER_U               22223 non-null uint8\n",
+      "TV_REG_Border          22223 non-null uint8\n",
+      "TV_REG_C Scotland      22223 non-null uint8\n",
+      "TV_REG_East            22223 non-null uint8\n",
+      "TV_REG_London          22223 non-null uint8\n",
+      "TV_REG_Midlands        22223 non-null uint8\n",
+      "TV_REG_N East          22223 non-null uint8\n",
+      "TV_REG_N Scot          22223 non-null uint8\n",
+      "TV_REG_N West          22223 non-null uint8\n",
+      "TV_REG_S & S East      22223 non-null uint8\n",
+      "TV_REG_S West          22223 non-null uint8\n",
+      "TV_REG_Ulster          22223 non-null uint8\n",
+      "TV_REG_Wales & West    22223 non-null uint8\n",
+      "TV_REG_Yorkshire       22223 non-null uint8\n",
+      "NGROUP_A               22223 non-null uint8\n",
+      "NGROUP_B               22223 non-null uint8\n",
+      "NGROUP_C               22223 non-null uint8\n",
+      "NGROUP_D               22223 non-null uint8\n",
+      "NGROUP_E               22223 non-null uint8\n",
+      "NGROUP_F               22223 non-null uint8\n",
+      "NGROUP_U               22223 non-null uint8\n",
+      "REGION_Midlands        22223 non-null uint8\n",
+      "REGION_North           22223 non-null uint8\n",
+      "REGION_Scottish        22223 non-null uint8\n",
+      "REGION_South East      22223 non-null uint8\n",
+      "REGION_South West      22223 non-null uint8\n",
+      "CLASS_Gold             22223 non-null uint8\n",
+      "CLASS_Platinum         22223 non-null uint8\n",
+      "CLASS_Silver           22223 non-null uint8\n",
+      "CLASS_Tin              22223 non-null uint8\n",
+      "dtypes: float64(3), int64(2), uint8(32)\n",
+      "memory usage: 1.5 MB\n"
+     ]
+    }
+   ],
    "source": [
     "# Gets the preprocessed data set for Organics.\n",
     "import casestudy_tools as tools\n",
     "df = tools.preprocess()\n",
-    "#df.info()"
+    "df.info()"
    ]
   },
   {
