Task 3 completed by David

--- a/Task 2.ipynb
+++ b/Task 2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -213,13 +213,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=5,\n",
+      "            max_features=None, max_leaf_nodes=None,\n",
+      "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+      "            min_samples_leaf=1, min_samples_split=2,\n",
+      "            min_weight_fraction_leaf=0.0, presort=False, random_state=10,\n",
+      "            splitter='best')\n",
       "Decision Tree Statistics:\n",
       "Train Accuracy: 0.8187194651581383\n",
       "Test Accuracy: 0.8162591870406479\n",
@@ -242,6 +248,8 @@
     "# Training a decision tree model based on deafault settings.\n",
     "decisiontree_model_optimal = DecisionTreeClassifier(max_depth=5, random_state=random_state)\n",
     "decisiontree_model_optimal.fit(dataset_train, target_dataset_train)\n",
+    "\n",
+    "print(decisiontree_model_optimal)\n",
     "\n",
     "train_accuracy = decisiontree_model_optimal.score(dataset_train, target_dataset_train)\n",
     "test_accuracy = decisiontree_model_optimal.score(dataset_test, target_dataset_test)\n",
