--- a/Task 5.ipynb
+++ b/Task 5.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Import the ensamble model VotingClassifier\n",
+    "from sklearn.ensemble import VotingClassifier\n",
+    "import casestudy_tools as tools"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -9,9 +22,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Default Decision Tree Statistics:\n",
-      "Train Accuracy: 0.8180123425044998\n",
-      "Test Accuracy: 0.8158092095395231\n",
+      "CV Tuned Decision Tree Statistics:\n",
+      "Train Accuracy: 0.818012342504\n",
+      "Test Accuracy: 0.81580920954\n",
       "\n",
       "Classification Report:\n",
       "             precision    recall  f1-score   support\n",
@@ -26,25 +39,22 @@
     }
    ],
    "source": [
-    "# Import the ensamble model VotingClassifier\n",
-    "from sklearn.ensemble import VotingClassifier\n",
-    "import casestudy_tools as tools\n",
-    "\n",
-    "dt_model = tools.get_decision_tree()\n",
-    "\n"
+    "dt_model = tools.get_decision_tree()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train accuracy: 0.814412445358704\n",
-      "Test accuracy: 0.8189590520473976\n",
+      "Neural Network Model Statistics:\n",
+      "Train accuracy: 0.814412445359\n",
+      "Test accuracy: 0.818959052047\n",
+      "Classification Report:\n",
       "             precision    recall  f1-score   support\n",
       "\n",
       "          0       0.84      0.94      0.89      5015\n",
@@ -61,28 +71,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using RFECV\n",
+      "RFECV\n",
+      "Logistic Regression Model Statistics:\n",
+      "Train accuracy: 0.811519670867\n",
+      "Test accuracy: 0.816709164542\n",
+      "Classification Report:\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.84      0.94      0.89      5015\n",
+      "          1       0.71      0.44      0.54      1652\n",
+      "\n",
+      "avg / total       0.80      0.82      0.80      6667\n",
+      "\n",
+      "{'C': 1e-06}\n"
+     ]
+    }
+   ],
    "source": [
-    "#log_reg_model = tools.get_logistic_regression_model()"
+    "log_reg_model = tools.get_logistic_regression_model()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# initialise the classifier with 3 different estimators\n",
-    "ensemble_voting_model = VotingClassifier(estimators=[('dt', dt_model), ('nn', nn_model)], voting='soft')\n",
-    "#voting = VotingClassifier(estimators=[('dt', dt_model), ('lr', log_reg_model), ('nn', nn_model)], voting='soft')"
+    "ensemble_voting_model = VotingClassifier(estimators=[('dt', dt_model), ('lr', log_reg_model), ('nn', nn_model)], voting='soft')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Divides a new set of training and testdata from the given dataset.\n",
@@ -120,16 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ensemble soft train accuracy: 0.8176266392388789\n",
-      "Ensemble soft test accuracy: 0.8215089245537723\n",
-      "ROC score of soft voting classifier: 0.8263013622570544\n",
+      "Ensemble soft train accuracy: 0.817626639239\n",
+      "Ensemble soft test accuracy: 0.821508924554\n",
+      "ROC score of soft voting classifier: 0.826314337858\n",
       "Classification Report for Ensemble:\n",
       "             precision    recall  f1-score   support\n",
       "\n",
@@ -138,18 +172,6 @@
       "\n",
       "avg / total       0.81      0.82      0.80      6667\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/maxedman/anaconda3/lib/python3.6/site-packages/sklearn/preprocessing/label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
-      "  if diff:\n",
-      "/Users/maxedman/anaconda3/lib/python3.6/site-packages/sklearn/preprocessing/label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
-      "  if diff:\n",
-      "/Users/maxedman/anaconda3/lib/python3.6/site-packages/sklearn/preprocessing/label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
-      "  if diff:\n"
      ]
     }
    ],
@@ -184,27 +206,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy score on test for Decision Tree: 0.8158092095395231\n",
-      "Accuracy score on test for Neural Networks: 0.8189590520473976\n",
-      "Accuracy score on test for Ensemble: 0.8215089245537723\n"
+     "ename": "ValueError",
+     "evalue": "X has 36 features per sample; expecting 3",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-b35c2c288a81>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0my_pred_dt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdt_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0my_pred_log_reg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlog_reg_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset_test_scaled\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0my_pred_nn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnn_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset_test_scaled\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Program Files (x86)\\Microsoft Visual Studio\\Shared\\Anaconda3_64\\lib\\site-packages\\sklearn\\linear_model\\base.py\u001b[0m in \u001b[0;36mpredict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    322\u001b[0m             \u001b[0mPredicted\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0mper\u001b[0m \u001b[0msample\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    323\u001b[0m         \"\"\"\n\u001b[1;32m--> 324\u001b[1;33m         \u001b[0mscores\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecision_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    325\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    326\u001b[0m             \u001b[0mindices\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mscores\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Program Files (x86)\\Microsoft Visual Studio\\Shared\\Anaconda3_64\\lib\\site-packages\\sklearn\\linear_model\\base.py\u001b[0m in \u001b[0;36mdecision_function\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    303\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mn_features\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    304\u001b[0m             raise ValueError(\"X has %d features per sample; expecting %d\"\n\u001b[1;32m--> 305\u001b[1;33m                              % (X.shape[1], n_features))\n\u001b[0m\u001b[0;32m    306\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    307\u001b[0m         scores = safe_sparse_dot(X, self.coef_.T,\n",
+      "\u001b[1;31mValueError\u001b[0m: X has 36 features per sample; expecting 3"
      ]
     }
    ],
    "source": [
     "\n",
     "y_pred_dt = dt_model.predict(dataset_test)\n",
-    "#y_pred_log_reg = log_reg_model.predict(dataset_test_scaled)\n",
+    "y_pred_log_reg = log_reg_model.predict(dataset_test_scaled)\n",
     "y_pred_nn = nn_model.predict(dataset_test_scaled)\n",
     "\n",
     "print(\"Accuracy score on test for Decision Tree:\", accuracy_score(target_dataset_test, y_pred_dt))\n",
-    "#print(\"Accuracy score on test for logistic regression:\", accuracy_score(target_dataset_test, y_pred_log_reg))\n",
+    "print(\"Accuracy score on test for logistic regression:\", accuracy_score(target_dataset_test, y_pred_log_reg))\n",
     "print(\"Accuracy score on test for Neural Networks:\", accuracy_score(target_dataset_test, y_pred_nn))\n",
     "print(\"Accuracy score on test for Ensemble:\", accuracy_score(target_dataset_test, y_pred_ensemble))"
    ]
@@ -248,8 +274,8 @@
    "source": [
     "print(\"Classification Report for Decision Tree:\")\n",
     "print(classification_report(target_dataset_test, y_pred_dt))\n",
-    "#print(\"Classification Report for logistic regression:\")\n",
-    "#print(classification_report(target_dataset_test, y_pred_log_reg))\n",
+    "print(\"Classification Report for logistic regression:\")\n",
+    "print(classification_report(target_dataset_test, y_pred_log_reg))\n",
     "print(\"Classification Report for Neural Networks:\")\n",
     "print(classification_report(target_dataset_test, y_pred_nn))\n",
     "print(\"Classification Report for Ensemble:\")\n",
@@ -274,17 +300,17 @@
    "source": [
     "\n",
     "y_pred_proba_dt = dt_model.predict_proba(dataset_test)\n",
-    "#y_pred_proba_log_reg = log_reg_model.predict_proba(dataset_test_scaled)\n",
+    "y_pred_proba_log_reg = log_reg_model.predict_proba(dataset_test_scaled)\n",
     "y_pred_proba_nn = nn_model.predict_proba(dataset_test_scaled)\n",
     "y_pred_proba_ensemble = ensemble_voting_model.predict_proba(dataset_test_scaled)\n",
     "\n",
     "roc_index_dt = roc_auc_score(target_dataset_test, y_pred_proba_dt[:, 1])\n",
-    "#roc_index_log_reg = roc_auc_score(target_dataset_test, y_pred_proba_log_reg[:, 1])\n",
+    "roc_index_log_reg = roc_auc_score(target_dataset_test, y_pred_proba_log_reg[:, 1])\n",
     "roc_index_nn = roc_auc_score(target_dataset_test, y_pred_proba_nn[:, 1])\n",
     "roc_index_ensemble = roc_auc_score(target_dataset_test, y_pred_proba_ensemble[:, 1])\n",
     "\n",
     "print(\"ROC index on test for DT:\", roc_index_dt)\n",
-    "#print(\"ROC index on test for logistic regression:\", roc_index_log_reg)\n",
+    "print(\"ROC index on test for logistic regression:\", roc_index_log_reg)\n",
     "print(\"ROC index on test for NN:\", roc_index_nn)\n",
     "print(\"ROC index on test for Ensemble:\", roc_index_ensemble)"
    ]
@@ -292,14 +318,16 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.metrics import roc_curve\n",
     "\n",
     "# Gets the false positive rate, true positive rate and thresholds used for each model\n",
     "fpr_dt, tpr_dt, thresholds_dt = roc_curve(target_dataset_test, y_pred_proba_dt[:,1])\n",
-    "#fpr_log_reg, tpr_log_reg, thresholds_log_reg = roc_curve(target_dataset_test, y_pred_proba_log_reg[:,1])\n",
+    "fpr_log_reg, tpr_log_reg, thresholds_log_reg = roc_curve(target_dataset_test, y_pred_proba_log_reg[:,1])\n",
     "fpr_nn, tpr_nn, thresholds_nn = roc_curve(target_dataset_test, y_pred_proba_nn[:,1])\n",
     "fpr_ensemble, tpr_ensemble, thresholds_ensemble = roc_curve(target_dataset_test, y_pred_proba_ensemble[:,1])"
    ]
@@ -333,12 +361,10 @@
     "plt.rcParams.update(params)\n",
     "\n",
     "plt.plot(fpr_dt, tpr_dt, label='ROC Curve for DT {:.3f}'.format(roc_index_dt), color='red', lw=0.5)\n",
-    "#plt.plot(fpr_log_reg, tpr_log_reg, label='ROC Curve for Log reg {:.3f}'.format(roc_index_log_reg), color='green', lw=0.5)\n",
+    "plt.plot(fpr_log_reg, tpr_log_reg, label='ROC Curve for Log reg {:.3f}'.format(roc_index_log_reg), color='green', lw=0.5)\n",
     "plt.plot(fpr_nn, tpr_nn, label='ROC Curve for NN {:.3f}'.format(roc_index_nn), color='darkorange', lw=0.5)\n",
     "plt.plot(fpr_ensemble, tpr_ensemble, label='ROC Curve for Ensemble {:.3f}'.format(roc_index_ensemble), color='yellow', lw=0.5)\n",
     "\n",
-    "# plt.plot(fpr[2], tpr[2], color='darkorange',\n",
-    "#          lw=lw, label='ROC curve (area = %0.2f)' % roc_auc[2])\n",
     "plt.plot([0, 1], [0, 1], color='navy', lw=0.5, linestyle='--')\n",
     "plt.xlim([0.0, 1.0])\n",
     "plt.ylim([0.0, 1.0])\n",
@@ -352,7 +378,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -373,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
